@@ -1,14 +1,14 @@
 // This file may be redistributed and modified only under the terms of
 // the GNU Lesser General Public License (See COPYING for details).
-// Copyright (C) 2005 - 2006 Simon Goodall
+// Copyright (C) 2005 - 2007 Simon Goodall
 
 #include "types.h"
 
 #include <tinyxml/tinyxml.h>
 
 #include "FileIO.h"
-
 #include "ChannelFileList.h"
+#include "Encoder.h"
 
 namespace WFUT {
 
@@ -18,7 +18,7 @@ static int writeFile(TiXmlElement *element, const FileObject &file) {
   // TODO need to convert numbers to string as tinyxml doesn'y support 
   // unsigned lonfs
 
-  element->SetAttribute(TAG_filename, file.filename);
+  element->SetAttribute(TAG_filename, Encoder::encode(file.filename));
   element->SetAttribute(TAG_version, file.version);
   element->SetAttribute(TAG_crc32, file.crc32);
   element->SetAttribute(TAG_size, file.size);
